# SectorEngine

./: CMakeLists.txt  LICENSE.txt  README.md  vcpkg.json
Docs/: Overview.md
Game/: CMakeLists.txt  Level.hpp  Main.cpp
Game/Renderer/: OpenGL.cpp  OpenGL.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
Game/Resource/: MapLoader.cpp  MapLoader.hpp  Utilities.hpp  WadFile.cpp  WadFile.hpp
Game/Utility/: Timer.hpp
GameData/: imgui.ini
GameData/Maps/: NoHoles.dbs  NoHoles.wad  NoHoles.wad.MAP01.autosave1  NoHoles.wad.backup1  NoHoles.wad.backup2  Square.dbs  Square.wad  TestMap1.dbs  TestMap1.wad  TestMap1.wad.MAP01.autosave1  TestMap1.wad.MAP01.autosave2  TestMap1.wad.backup1
GameData/Shaders/: Main.frag  Main.vert
lib/: CMakeLists.txt
lib/Glad/: CMakeLists.txt
lib/Glad/include/glad/: glad.h
lib/Glad/src/: glad.c
